--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 <input type="text" placeholder="Tìm kiếm">
                 <i class="ri-search-eye-line"></i>
             </div>
-            <div class="hrader-cart">
-                <i class="ri-shopping-cart-2-line"></i>
+            <div class="header-cart">
+                <i class="ri-shopping-cart-2-line" number = "4"></i>
             </div>
         </div>
        </div>
