--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"rel="stylesheet"/>
 </head>
 <body>
-    <header>
+    <!--header-->
+    <!-- <header>
        <div class="container">
         <div class="row-fex">
             <div class="header-logo">
@@ -38,8 +39,26 @@
             </div>
         </div>
        </div>
-    </header>
-
+    </header> -->
+    <!--slider-->
+    <section class="slider">
+        <div class="slider-items">
+            <div class="slider-item">
+                <img src="asset/imges/banner1.jpg" alt="">
+            </div>
+            <div class="slider-item">
+                <img src="asset/imges/banner2.jpg" alt="">
+            </div>
+            <div class="slider-item">
+                <img src="asset/imges/banner3.jpg" alt="">
+            </div>
+        </div>
+        <div class="slider-arrow">
+            <i class="ri-arrow-right-line"></i>
+            <i class="ri-arrow-left-line"></i>
+        </div>
+    </section>
+    
 
     <script src="asset/js/script.js"></script>
 </body>
