--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"rel="stylesheet"/>
 </head>
 <body>
-    <!--header-->
-    <!-- <header>
+    <!-- header-->
+    <header>
        <div class="container">
         <div class="row-fex">
             <div class="header-logo">
@@ -39,7 +39,7 @@
             </div>
         </div>
        </div>
-    </header> -->
+    </header>
     <!--slider-->
     <section class="slider">
         <div class="slider-items">
