--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
     <header>
        <div class="container">
         <div class="row-fex">
+            <div class="header-bar-icon">
+                <i class="ri-menu-fill"></i>
+            </div>
             <div class="header-logo">
                 <img src="asset\imges\logo-coolmate-new-v2.png" alt="">
+            </div>
+            <div class="header-logo-mobile">
+                <img src="asset/imges/logo-coolmate-new-v2.png" alt="">
             </div>
             <div class="header-nav">
                 <nav>
