--- a/index.html
+++ b/index.html
@@ -64,7 +64,127 @@
             <i class="ri-arrow-left-line"></i>
         </div>
     </section>
-    
+    <!-- hotproduct-->
+     <setion class="hot-products">
+        <div class="container">
+            <div class="row-grid">
+                <p class="heading-text">Sản Phẩm Mới</p>
+
+            </div>
+            <div class="row-grid row-grid-hot-products">
+                <div class="hot-products-item">
+                    <img src="asset/imges/product1.webp" alt="">
+                    <p>Áo Thun Nam Cotton 220GSM</p>
+                    <span>100% Cotton</span>
+                    <div class="hot-products-price">
+                        <p>159.000 <sup>đ</sup><samp>179.000<sup>đ</sup></samp></p>
+                    </div>
+                </div>
+                <div class="hot-products-item">
+                    <img src="asset/imges/product6.webp" alt="">
+                    <p>Áo Thun Nam Cotton 220GSM</p>
+                    <span>100% Cotton</span>
+                    <div class="hot-products-price">
+                        <p>159.000 <sup>đ</sup><samp>179.000<sup>đ</sup></samp></p>
+                    </div>
+                </div>
+                <div class="hot-products-item">
+                    <img src="asset/imges/product3.webp" alt="">
+                    <p>Áo Thun Nam Cotton 220GSM</p>
+                    <span>100% Cotton</span>
+                    <div class="hot-products-price">
+                        <p>159.000 <sup>đ</sup><samp>179.000<sup>đ</sup></samp></p>
+                    </div>
+                </div>
+                <div class="hot-products-item">
+                    <img src="asset/imges/product4.webp" alt="">
+                    <p>Áo Thun Nam Cotton 220GSM</p>
+                    <span>100% Cotton</span>
+                    <div class="hot-products-price">
+                        <p>159.000 <sup>đ</sup><samp>179.000<sup>đ</sup></samp></p>
+                    </div>
+                </div>
+                <div class="hot-products-item">
+                    <img src="asset/imges/product5.webp" alt="">
+                    <p>Áo Thun Nam Cotton 220GSM</p>
+                    <span>100% Cotton</span>
+                    <div class="hot-products-price">
+                        <p>159.000 <sup>đ</sup><samp>179.000<sup>đ</sup></samp></p>
+                    </div>
+                </div>
+                <div class="hot-products-item">
+                    <img src="asset/imges/product6.webp" alt="">
+                    <p>Áo Thun Nam Cotton 220GSM</p>
+                    <span>100% Cotton</span>
+                    <div class="hot-products-price">
+                        <p>159.000 <sup>đ</sup><samp>179.000<sup>đ</sup></samp></p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+     </setion>
+    <!-- popular-product-->
+    <setion class="hot-products">
+        <div class="container">
+            <div class="row-grid">
+                <p class="heading-text">Sản Phẩm Phổ Biến</p>
+
+            </div>
+            <div class="row-grid row-grid-hot-products">
+                <div class="hot-products-item">
+                    <img src="asset/imges/product1.webp" alt="">
+                    <p>Áo Thun Nam Cotton 220GSM</p>
+                    <span>100% Cotton</span>
+                    <div class="hot-products-price">
+                        <p>159.000 <sup>đ</sup><samp>179.000<sup>đ</sup></samp></p>
+                    </div>
+                </div>
+                <div class="hot-products-item">
+                    <img src="asset/imges/product6.webp" alt="">
+                    <p>Áo Thun Nam Cotton 220GSM</p>
+                    <span>100% Cotton</span>
+                    <div class="hot-products-price">
+                        <p>159.000 <sup>đ</sup><samp>179.000<sup>đ</sup></samp></p>
+                    </div>
+                </div>
+                <div class="hot-products-item">
+                    <img src="asset/imges/product3.webp" alt="">
+                    <p>Áo Thun Nam Cotton 220GSM</p>
+                    <span>100% Cotton</span>
+                    <div class="hot-products-price">
+                        <p>159.000 <sup>đ</sup><samp>179.000<sup>đ</sup></samp></p>
+                    </div>
+                </div>
+                <div class="hot-products-item">
+                    <img src="asset/imges/product4.webp" alt="">
+                    <p>Áo Thun Nam Cotton 220GSM</p>
+                    <span>100% Cotton</span>
+                    <div class="hot-products-price">
+                        <p>159.000 <sup>đ</sup><samp>179.000<sup>đ</sup></samp></p>
+                    </div>
+                </div>
+                <div class="hot-products-item">
+                    <img src="asset/imges/product5.webp" alt="">
+                    <p>Áo Thun Nam Cotton 220GSM</p>
+                    <span>100% Cotton</span>
+                    <div class="hot-products-price">
+                        <p>159.000 <sup>đ</sup><samp>179.000<sup>đ</sup></samp></p>
+                    </div>
+                </div>
+                <div class="hot-products-item">
+                    <img src="asset/imges/product6.webp" alt="">
+                    <p>Áo Thun Nam Cotton 220GSM</p>
+                    <span>100% Cotton</span>
+                    <div class="hot-products-price">
+                        <p>159.000 <sup>đ</sup><samp>179.000<sup>đ</sup></samp></p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+     </setion>
+
 
     <script src="asset/js/script.js"></script>
 </body>
