--- a/index.html
+++ b/index.html
@@ -184,8 +184,34 @@
             </div>
         </div>
      </setion>
-
-
+     <!-- Footer-->
+     <footer>
+        <div class="container">
+            <div class="row-grid">
+                <div class="footer-item">
+                    <p>COOLCLUB</p>
+                    <P>Đăng kí thành viên</P>
+                    <P>Ưu đãi & Đặc quyền</P>
+                </div>
+                <div class="footer-item">
+                    <p>Tài liệu - Tuyển dụng</p>
+                    <p>Tuyển dụng</p>
+                    <p>Đăng ký bản quyền</p>
+                </div>
+                <div class="footer-item">
+                    <p>Chính sách</p>
+                    <p>Chính sách đổi trả 60 ngày</p>
+                    <p>Chính sách khuyến mãi</p>
+                    <p>Chính sách bảo mật</p>
+                </div>
+                <div class="footer-item">
+                    <p>Kiến thức mặc đẹp</p>
+                    <p>Hướng dẫn chọn size đồ nam</p>
+                    <p>Hướng dẫn chọn size đồ nữ</p>
+                </div>
+            </div>
+        </div>
+     </footer>
     <script src="asset/js/script.js"></script>
 </body>
 </html>
