--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- header-->
-    <header>
+    <header id="header">
        <div class="container">
         <div class="row-fex">
             <div class="header-bar-icon">
