--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
         </div>
        </div>
     </header>
-    <!--slider-->
-    <section class="slider">
-        <div class="slider-items">
+
+    <main>
+        <div class="slider">
+            <div class="slider-items">
             <div class="slider-item">
                 <img src="asset/imges/banner1.jpg" alt="">
             </div>
